--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 torch>1.5.0
 tqdm>=4.26
-pyfilter @ git+https://github.com/tingiskhan/pyfilter#egg=pyfilter
+stochproc @ git+https://github.com/tingiskhan/stoch-proc#egg=stochproc
 pytest
