--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,7 @@ jobs:
       run: |        
         conda install -c anaconda pytest flake8
         if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
+        if [ -f test_requirements.txt ]; then python -m pip install -r test_requirements.txt; fi
     - name: Lint with flake8
       shell: bash -l {0}
       run: |
