--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,8 +34,7 @@ jobs:
       shell: bash -l {0}
       run: |        
         conda install -c anaconda pytest flake8
-        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
-        if [ -f test_requirements.txt ]; then python -m pip install -r test_requirements.txt; fi
+        pip install .[dev]
     - name: Lint with flake8
       shell: bash -l {0}
       run: |
