--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "pyro-ppl>=1.8.2",
     "tqdm>=4.26",
     "stochproc @ git+https://github.com/tingiskhan/stoch-proc#egg=stochproc",
-    "matplotlib>=3.5.2"
+    "matplotlib>=3.5.2",
+    "statsmodels>=0.13.2"
 ]
 
 [project.optional-dependencies]
